--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,6 +9,7 @@
     --font-sans: var(--font-geist-sans);
     --font-mono: var(--font-geist-mono);
     --font-space: var(--font-space);
+    --font-figtree: var(--font-figtree);
     --color-sidebar-ring: var(--sidebar-ring);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
