--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
     --font-mono: var(--font-geist-mono);
     --font-space: var(--font-space);
     --font-figtree: var(--font-figtree);
+    --font-doto: var(--font-doto);
     --color-sidebar-ring: var(--sidebar-ring);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
