--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -35,6 +35,7 @@
     --color-secondary-foreground: var(--secondary-foreground);
     --color-secondary: var(--secondary);
     --color-primary-foreground: var(--primary-foreground);
+    --color-primary-hover: var(--primary-hover);
     --color-primary: var(--primary);
     --color-popover-foreground: var(--popover-foreground);
     --color-popover: var(--popover);
@@ -59,6 +60,7 @@
     --popover-foreground: oklch(0.129 0.042 264.695);
     --primary: oklch(0.592 0.178 257.29);
     --primary-foreground: oklch(0.984 0.003 247.858);
+    --primary-hover: oklch(0.646 0.175 256.37);
     --secondary: oklch(0.968 0.007 247.896);
     --secondary-foreground: oklch(0.208 0.042 265.755);
     --muted: oklch(0.968 0.007 247.896);
@@ -91,6 +93,7 @@
     --card-foreground: oklch(0.984 0.003 247.858);
     --popover: oklch(0.208 0.042 265.755);
     --popover-foreground: oklch(0.984 0.003 247.858);
+    --primary-hover: oklch(0.646 0.175 256.37);
     --primary: oklch(0.592 0.178 257.29);
     /*--primary: oklch(0.929 0.013 255.508);*/
     --primary-foreground: oklch(0.208 0.042 265.755);
