update:firebase-emulator-init

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,7 @@
 
 :root {
     --radius: 0.625rem;
-    --background: oklch(0.968 0.0183 86.15);
+    --background: oklch(0.955 0 0);
     --foreground: oklch(0.129 0.042 264.695);
     --card: oklch(1 0 0);
     --card-foreground: oklch(0.129 0.042 264.695);
@@ -151,5 +151,18 @@
 
     .rotate-y-180 {
         transform: rotateY(180deg);
+    }
+}
+
+.animate-circle-line {
+    animation: animate-circle-line 2s ease-out infinite;
+}
+
+@keyframes animate-circle-line {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(100%);
     }
 }
