--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -167,6 +167,33 @@
     }
 }
 
+.x-ping {
+    animation: animate-x-ping 2s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
+@keyframes animate-x-ping {
+    0% {
+        scale: 0.4;
+        opacity: 0.6;
+    }
+    /*25% {
+        scale: 0.6;
+        opacity: 0.65;
+    }
+    50% {
+        scale: 1.2;
+        opacity: 0.7;
+    }*/
+    90% {
+        scale: 2;
+        opacity: 0;
+    }
+    100% {
+        scale: 0.1;
+        opacity: 0.1;
+    }
+}
+
 @layer utilities {
     .bg-size-200 {
         background-size: 200%;
