update:setting-scanners

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -49,6 +49,20 @@
     --radius-md: calc(var(--radius) - 2px);
     --radius-lg: var(--radius);
     --radius-xl: calc(var(--radius) + 4px);
+    /* MAC COLORS */
+    --color-mac-red: var(--mac-red);
+    --color-mac-orange: var(--mac-orange);
+    --color-mac-yellow: var(--mac-yellow);
+    --color-mac-green: var(--mac-green);
+    --color-mac-mint: var(--mac-mint);
+    --color-mac-teal: var(--mac-teal);
+    --color-mac-cyan: var(--mac-cyan);
+    --color-mac-blue: var(--mac-blue);
+    --color-mac-indigo: var(--mac-indigo);
+    --color-mac-purple: var(--mac-purple);
+    --color-mac-pink: var(--mac-pink);
+    --color-mac-brown: var(--mac-brown);
+    --color-mac-gray: var(--mac-gray);
 }
 
 :root {
@@ -66,7 +80,7 @@
     --secondary-foreground: oklch(0.208 0.042 265.755);
     --muted: oklch(0.968 0.007 247.896);
     --muted-foreground: oklch(0.554 0.046 257.417);
-    --accent: oklch(0.968 0.007 247.896);
+    --accent: oklch(0.955 0.107 108.33);
     --accent-foreground: oklch(0.208 0.042 265.755);
     --destructive: oklch(0.577 0.245 27.325);
     --border: oklch(0.929 0.013 255.508);
@@ -86,6 +100,20 @@
     --sidebar-border: oklch(0.929 0.013 255.508);
     --sidebar-ring: oklch(0.704 0.04 256.788);
     --ash: oklch(0.884 0.007 208.78);
+    /* MAC LIGHT */
+    --mac-red: oklch(65.67% 0.257 29.05);
+    --mac-orange: oklch(78.39% 0.234 70.03);
+    --mac-yellow: oklch(90.62% 0.174 98.58);
+    --mac-green: oklch(76.84% 0.194 145.71);
+    --mac-mint: oklch(76.92% 0.182 187.71);
+    --mac-teal: oklch(73.63% 0.101 220.42);
+    --mac-cyan: oklch(78.28% 0.141 248.96);
+    --mac-blue: oklch(56.59% 0.241 264.58);
+    --mac-indigo: oklch(48.8% 0.154 295.93);
+    --mac-purple: oklch(61.45% 0.195 318.1);
+    --mac-pink: oklch(65.2% 0.255 14.79);
+    --mac-brown: oklch(61.02% 0.078 71.57);
+    --mac-gray: oklch(58.26% 0.012 276.51);
 }
 
 .dark {
@@ -103,7 +131,8 @@
     --secondary-foreground: oklch(0.984 0.003 247.858);
     --muted: oklch(0.279 0.041 260.031);
     --muted-foreground: oklch(0.704 0.04 256.788);
-    --accent: oklch(0.279 0.041 260.031);
+    /*--accent: oklch(0.924 0.108 108.33);*/
+    --accent: oklch(0.985 0.107 108.33);
     --accent-foreground: oklch(0.984 0.003 247.858);
     --destructive: oklch(0.704 0.191 22.216);
     --border: oklch(1 0 0 / 10%);
@@ -123,6 +152,20 @@
     --sidebar-border: oklch(1 0 0 / 10%);
     --sidebar-ring: oklch(0.551 0.027 264.364);
     --ash: oklch(0.25 0.04 245);
+    /* MAC DARK */
+    --mac-red: oklch(66.28% 0.25 28.91);
+    --mac-orange: oklch(79.79% 0.222 69.94);
+    --mac-yellow: oklch(91.51% 0.17 98.31);
+    --mac-green: oklch(78.85% 0.202 145.45);
+    --mac-mint: oklch(84.24% 0.14 188.05);
+    --mac-teal: oklch(79.51% 0.108 220.51);
+    --mac-cyan: oklch(80.8% 0.144 249.36);
+    --mac-blue: oklch(60.61% 0.242 264.8);
+    --mac-indigo: oklch(51.21% 0.163 296);
+    --mac-purple: oklch(65.32% 0.208 318.23);
+    --mac-pink: oklch(71.57% 0.219 14.75);
+    --mac-brown: oklch(63.46% 0.076 71.94);
+    --mac-gray: oklch(60.89% 0.012 276.57);
 }
 
 @layer utilities {
