--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,8 @@
     --color-progress-end: oklch(0.845 0.128 195.01);
     --color-card: var(--card);
     --color-ash: var(--ash);
+    --color-origin: var(--origin);
+    --color-dark-origin: var(--dark-origin);
     --color-protap-blue: oklch(0.304 0.109 261.73);
     --radius-sm: calc(var(--radius) - 4px);
     --radius-md: calc(var(--radius) - 2px);
@@ -70,6 +72,8 @@
     --background: oklch(0.96 0 0);
     --foreground: oklch(0.129 0.042 264.695);
     --card: oklch(1 0 0);
+    --origin: oklch(0.85 0.01 285.81);
+    --dark-origin: oklch(0.925 0.006 285.9);
     --card-foreground: oklch(0.129 0.042 264.695);
     --popover: oklch(1 0 0);
     --popover-foreground: oklch(0.129 0.042 264.695);
@@ -120,6 +124,8 @@
     --background: oklch(0.14 0 286);
     --foreground: oklch(0.984 0.003 247.858);
     --card: oklch(0.208 0.042 265.755);
+    --origin: oklch(0.37 0.013 285.81);
+    --dark-origin: oklch(0.215 0.006 285.9);
     --card-foreground: oklch(0.984 0.003 247.858);
     --popover: oklch(0.208 0.042 265.755);
     --popover-foreground: oklch(0.984 0.003 247.858);
