--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,6 +46,7 @@
     --color-ash: var(--ash);
     --color-origin: var(--origin);
     --color-dark-origin: var(--dark-origin);
+    --color-dim-origin: var(--dim-origin);
     --color-protap-blue: oklch(0.304 0.109 261.73);
     --radius-sm: calc(var(--radius) - 4px);
     --radius-md: calc(var(--radius) - 2px);
@@ -82,20 +83,24 @@
     --primary-hover: oklch(0.646 0.175 256.37);
     --secondary: oklch(0.968 0.007 247.896);
     --secondary-foreground: oklch(0.208 0.042 265.755);
-    --muted: oklch(0.968 0.007 247.896);
-    --muted-foreground: oklch(0.554 0.046 257.417);
-    --accent: oklch(0.955 0.107 108.33);
+    --muted: oklch(0.967 0.001 286.375);
+    --muted-foreground: oklch(0.552 0.016 285.938);
+    /*--muted: oklch(0.968 0.007 247.896);
+    --muted-foreground: oklch(0.554 0.046 257.417);*/
+    --accent: oklch(0.967 0.001 286.375);
     --accent-foreground: oklch(0.208 0.042 265.755);
     --destructive: oklch(0.577 0.245 27.325);
-    --border: oklch(0.929 0.013 255.508);
-    --input: oklch(0.929 0.013 255.508);
+    --border: oklch(0.92 0.004 286.32);
+    --input: oklch(0.871 0.006 286.286);
+    /*--border: oklch(0.929 0.013 255.508);*/
+    /*--input: oklch(0.929 0.013 255.508);*/
     --ring: oklch(0.704 0.04 256.788);
     --chart-1: oklch(0.646 0.222 41.116);
     --chart-2: oklch(0.6 0.118 184.704);
     --chart-3: oklch(0.398 0.07 227.392);
     --chart-4: oklch(0.828 0.189 84.429);
     --chart-5: oklch(0.769 0.188 70.08);
-    --sidebar: oklch(0.984 0.003 247.858);
+    --sidebar: oklch(0.956 0.004 286.32);
     --sidebar-foreground: oklch(0.129 0.042 264.695);
     --sidebar-primary: oklch(0.208 0.042 265.755);
     --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
@@ -126,7 +131,7 @@
     --card: oklch(0.208 0.042 265.755);
     --origin: oklch(0.37 0.013 285.81);
     --dark-origin: oklch(0.215 0.006 285.9);
-    --card-foreground: oklch(0.984 0.003 247.858);
+    --dim-origin: oklch(0.283 0.009 285.81);
     --popover: oklch(0.208 0.042 265.755);
     --popover-foreground: oklch(0.984 0.003 247.858);
     --primary-hover: oklch(0.646 0.175 256.37);
@@ -135,21 +140,25 @@
     --primary-foreground: oklch(0.208 0.042 265.755);
     --secondary: oklch(0.27 0.01 286);
     --secondary-foreground: oklch(0.984 0.003 247.858);
-    --muted: oklch(0.279 0.041 260.031);
-    --muted-foreground: oklch(0.704 0.04 256.788);
+    --muted: oklch(0.21 0.006 285.885);
+    --muted-foreground: oklch(0.705 0.015 286.067);
+    /*--muted: oklch(0.279 0.041 260.031);*/
+    /*--muted-foreground: oklch(0.704 0.04 256.788);*/
     /*--accent: oklch(0.924 0.108 108.33);*/
-    --accent: oklch(0.985 0.107 108.33);
+    --accent: oklch(0.21 0.006 285.885); /* Custom */
     --accent-foreground: oklch(0.984 0.003 247.858);
     --destructive: oklch(0.704 0.191 22.216);
-    --border: oklch(1 0 0 / 10%);
-    --input: oklch(1 0 0 / 15%);
+    --border: oklch(0.246 0.009 285.69); /* Custom */
+    --input: oklch(0.246 0.009 285.69); /* Custom */
+    /*--border: oklch(1 0 0 / 10%);*/
+    /*--input: oklch(1 0 0 / 15%);*/
     --ring: oklch(0.551 0.027 264.364);
     --chart-1: oklch(0.488 0.243 264.376);
     --chart-2: oklch(0.696 0.17 162.48);
     --chart-3: oklch(0.769 0.188 70.08);
     --chart-4: oklch(0.627 0.265 303.9);
     --chart-5: oklch(0.645 0.246 16.439);
-    --sidebar: oklch(0.208 0.042 265.755);
+    --sidebar: oklch(0.206 0.008 285.69);
     --sidebar-foreground: oklch(0.984 0.003 247.858);
     --sidebar-primary: oklch(0.488 0.243 264.376);
     --sidebar-primary-foreground: oklch(0.984 0.003 247.858);
