--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
     --font-space: var(--font-space);
     --font-figtree: var(--font-figtree);
     --font-doto: var(--font-doto);
+    --font-tek: var(--font-tek);
     --color-sidebar-ring: var(--sidebar-ring);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
