--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,6 +72,7 @@
   --color-greyed: var(--greyed);
   --color-catnip: var(--catnip);
   --color-dysto: var(--dysto);
+  --color-lime: var(--lime);
 }
 
 :root {
@@ -134,6 +135,7 @@
   --greyed: oklch(0.381 0.021 274.3);
   --catnip: oklch(0.867 0.056 209.06);
   --dysto: oklch(0.44 0.0223 258.37);
+  --lime: oklch(0.927 0.111 108.38);
 }
 
 .dark {
@@ -197,6 +199,7 @@
   --greyed: oklch(0.381 0.021 274.3);
   --catnip: oklch(0.867 0.056 209.06);
   --dysto: oklch(0.44 0.0223 258.37);
+  --lime: oklch(0.927 0.111 108.38);
 }
 
 @layer utilities {
